# cmake_minimum_required(VERSION 3.10)
# project(kv_server)

# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)

# include_directories(
#     /usr/include/postgresql
#     ~/decs/Project_main/civetweb/include       # civetweb headers
# )

# add_executable(kv_server main.cpp)

# target_link_libraries(kv_server
#     ${CMAKE_SOURCE_DIR}/civetweb/build/src/libcivetweb.a # your built static lib
#     pq
# )
